# WCS

./: .gitignore  PUBLICATION_CHECKLIST.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: synthetic_case.json
scripts/: privacy_scan.py
src/chps_scheduler/: __init__.py  cli.py  config.py  coordinator.py  curves.py  data.py  dual.py  environments.py  gym_compat.py  models.py  physics.py  rolling.py  signals.py  training.py
tests/: test_config_and_signals.py  test_dual.py  test_rolling_rules.py  test_smoke.py
